@@ -128,6 +128,8 @@ Other Changes
 * SOLR-5421: Remove double set of distrib.from param in processAdd method of
   DistributedUpdateProcessor. (Anshum Gupta via shalin)
 
+* SOLR-5404: The example config references deprecated classes.
+  (Uwe Schindler, Rafał Kuć  via Mark Miller)
 
 ==================  4.6.0 ==================
 
